Style for KBA image radio button and fix for label covering image and radio button

--- a/SPA/app/styles/modules/_login.scss
+++ b/SPA/app/styles/modules/_login.scss
@@ -269,5 +269,6 @@
  	input[type="radio"] {
     display: block;
     margin: 0.5em auto;
+    width: auto;
   }
 }
